--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,7 +16,10 @@
   },
   "browser_action": {
     "default_icon": {
-      "16": "images/icon.png"
+      "16": "images/icon16.png",
+      "32": "images/icon32.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
     }
   }
 }
