名前の先頭を大文字に

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "syncTabClipper",
+  "name": "SyncTabClipper",
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "tab clip.",
