バージョンアップ&description更新

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "SyncTabClipper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
-  "description": "tab clip.",
+  "description": "chromeのタブを1つにまとめて、メモリ消費を抑えます。さらにchromeのアカウントに紐付いてデータを保存するため、複数の端末で同じように保存・保存したデータの読み込みができます。",
   "permissions": [
     "tabs",
     "storage",
