専用関数がグローバルを汚染しないようにしつつ、共通で使いそうな関数はutilに

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,8 +10,7 @@
   ],
   "background": {
     "scripts": [
-      "js/util.js",
-      "js/background.js"
+      "background.js"
     ],
     "persistant": false
   },
