--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SyncTabClipper",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "manifest_version": 2,
   "description": "開いているタブを1つにまとめて、メモリ消費を抑えます。アカウントごとにデータは同期して複数端末で同じ記録を使えます。",
   "permissions": [
@@ -10,7 +10,8 @@
   ],
   "background": {
     "scripts": [
-      "background.js"
+      "js/util.js",
+      "js/background.js"
     ],
     "persistant": false
   },
