--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "typescript": "^4.3.5"
+  "devDependencies": {
+    "@types/chrome": "^0.0.148",
+    "copy-webpack-plugin": "^9.0.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "uikit": "^3.7.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2"
   }
 }
