--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/chrome": "^0.0.148",
+    "@types/uikit": "^3.3.2",
     "copy-webpack-plugin": "^9.0.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
