--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "uikit": "^3.7.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch"
   }
 }
