--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
     "@types/chrome": "^0.0.148",
+    "@types/jest": "^26.0.24",
     "@types/uikit": "^3.3.2",
     "copy-webpack-plugin": "^9.0.1",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "uikit": "^3.7.1",
@@ -10,7 +13,7 @@
     "webpack-cli": "^4.7.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "watch": "webpack --watch"
   }
