--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
+    "build:prod": "webpack --mode=production && zip -r archive.zip dist/",
     "watch": "webpack --watch"
   }
 }
