--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "typescript": "^4.3.5",
     "uikit": "^3.7.1",
     "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack",
-    "build:prod": "webpack --mode=production && zip -r archive.zip dist/",
+    "build": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js && zip -r archive.zip dist/",
     "watch": "webpack --watch"
   }
 }
