--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,5 @@ jobs:
         run: npm install
       - name: Run test
         run: npm test
+      - name: build check
+        run: npm run build:prod
