--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "typeRoots": [
       "node_modules/@types",
       "types"
-    ]
+    ],
+    "jsx": "react"
   },
   "exclude": [
     "node_modules"
