--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "node_modules/@types",
       "types"
     ],
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "exclude": [
     "node_modules"
