--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "jest": "^27.0.6",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
