auto import css

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@types/uikit": "^3.3.2",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "jest": "^27.0.6",
+    "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.5",
