--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/uikit": "^3.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.1.4",
