--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "google"
+        "google",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
