--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^27.0.4",
