--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test": "jest",
     "build": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js && zip -r archive.zip dist/",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "react": "^17.0.2",
