--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: ik11235
-custom: ["https://www.amazon.jp/hz/wishlist/ls/18Q4IYUHBAFNC"]
+custom: ['https://www.amazon.jp/hz/wishlist/ls/18Q4IYUHBAFNC']
