--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,18 +11,10 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./",
     "paths": {
-      "interface": [
-        "types/interface"
-      ]
+      "interface": ["types/interface"]
     },
-    "typeRoots": [
-      "node_modules/@types",
-      "types"
-    ],
+    "typeRoots": ["node_modules/@types", "types"],
     "jsx": "react-jsx"
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
-
