JSDoc以外のeslint対応

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,7 @@
     "ecmaVersion": 12
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "react/prop-types": "off"
+  }
 }
