--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: npm install
         run: npm install
+      - name: Run format check
+        run: npm run format:check
+      - name: Run lint
+        run: npm run lint
       - name: Run test
         run: npm test
       - name: build check
