--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
   "name": "SyncTabClipper",
   "version": "0.2.0",
   "manifest_version": 2,
-  "description": "開いているタブを1つにまとめて、メモリ消費を抑えます。アカウントごとにデータは同期して複数端末で同じ記録を使えます。",
+  "description": "__MSG_Description__",
+  "default_locale": "en",
   "permissions": ["tabs", "storage", "contextMenus"],
   "background": {
     "scripts": [
